test/corpus/basic.txt
================================================================================
Basic .nvmrc
================================================================================

node

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part)))

================================================================================
Basic .nvmrc with comment
================================================================================

v20

# this is a comment

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part))
  (comment))

================================================================================
Basic .nvmrc with inline comment
================================================================================

21.2 # this is an inline comment

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part))
  (comment))

================================================================================
Basic .nvmrc with npm version
================================================================================

node
npm=10

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part))
  (entry
    key: (part)
    value: (value (part))))
