test/corpus/boundaries.txt
================================================================================
Empty file
================================================================================



--------------------------------------------------------------------------------

(source_file)

================================================================================
Whitespace and blank lines only
================================================================================

   
  

--------------------------------------------------------------------------------

(source_file)

================================================================================
Comments only
================================================================================

# just a note

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
No trailing newline (EOF)
================================================================================

18.20.0

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part)))

================================================================================
Bare equals only
================================================================================

=

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (value)))
