test/corpus/entries.txt
================================================================================
Bare version line
================================================================================

18.20.0

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part)))

================================================================================
Key-value pair
================================================================================

node=20

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
Multiple equals splits on first
================================================================================

a=b=c

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part)
      (part))))

================================================================================
Leading equals (value node, no key)
================================================================================

=foo

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (value
      (part))))

================================================================================
Equals-led value tail
================================================================================

a==b

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
Trailing equals (key, no value)
================================================================================

node=

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)))

================================================================================
Multiple entries
================================================================================

node=20
npm=9

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part)))
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
Version-ish with range operator (parses; rejecting ranges is downstream)
================================================================================

~18.0.0

--------------------------------------------------------------------------------

(source_file
  (entry
    value: (part)))
