test/corpus/extras.txt
================================================================================
Whole-line comment
================================================================================

# use lts
18.20.0

--------------------------------------------------------------------------------

(source_file
  (comment)
  (entry
    value: (part)))

================================================================================
Trailing comment (glued hash guards part excluding #)
================================================================================

node=20#lts

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part)))
  (comment))

================================================================================
Blank lines are ignored
================================================================================

node=20


npm=9

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part)))
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
CRLF line endings
================================================================================

node=18
npm=9

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part)))
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
Whitespace around tokens is absorbed
================================================================================

  node = 18

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part))))

================================================================================
Internal space keeps value as one part
================================================================================

node=hello world

--------------------------------------------------------------------------------

(source_file
  (entry
    key: (part)
    value: (value
      (part))))
